# IVCA

./: .gitignore  .replit  README.md  api.py  app.py  data_processing.py  database.py  database_api.py  ivca.db  job_cache.json  job_matcher.py  job_scraper.py  process_logo.py  pyproject.toml  resume_analyzer.py  sample_data.py  user_skills.py  utils.py  visualization.py
