[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "docx>=0.2.4",
    "fastapi>=0.115.12",
    "numpy>=2.2.4",
    "openai>=1.72.0",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.6",
    "plotly>=6.0.1",
    "pydantic>=2.11.3",
    "python-docx>=1.1.2",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.1",
    "trafilatura>=2.0.0",
]
